<resources>
    <string name="app_name">BeeWallet</string>
    <string name="base_url">https://google.com</string>
    <string name="title_activity_wallet">MainActivity</string>
    <string name="title_addresses">Addresses</string>
    <string name="title_orders">History</string>
    <string name="title_wallet">My Wallet</string>
    <string name="generate">Generate new</string>
    <string name="create_address">Create Address</string>
    <string name="btc_address">BTC address</string>
    <string name="generating">Loading</string>
    <string name="address">address</string>
    <string name="copied_clipboard">copied to clipboard</string>
    <string name="save">Save</string>
    <string name="balance">Balance</string>
    <string name="final_balance">Final balance</string>
    <string name="unconfirmed_balance">Unconfirmed balance</string>
    <string name="wallet_successfully">your wallet has been saved successfully</string>
    <string name="bitcoin_image_description">a bitcoin image as an item row from a list</string>
    <string name="empty_data">you don\'t have any\ntransactions yet</string>
    <string name="error">A problem has occurred.\nPlease try again</string>
    <string name="retry">Retry</string>
    <string name="go_to_wallet">Go to my wallet</string>
    <string name="no_address_message">No wallet found. If you haven\'t created one yet, you can create it in the create address section</string>
    <string name="ok">OK</string>
    <string name="no_address">No address found</string>
</resources>