<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_addresses">

    <fragment
        android:id="@+id/navigation_addresses"
        android:name="com.alobosz.bitcoinbeetrack.presentation.addresses.AddressCreatorFragment"
        android:label="@string/title_addresses"
        tools:layout="@layout/fragment_address_creator" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.alobosz.bitcoinbeetrack.presentation.transactions.OrderHistoryFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.alobosz.bitcoinbeetrack.presentation.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />
</navigation>